# WesoForge

./: .gitmodules  Cargo.toml  README.md  build-cli.ps1  build-cli.sh  build-gui.ps1  build-gui.sh
.github/workflows/: build-cli-gui.yml  build-cli.yml
crates/chiavdf-fast/: build.rs
crates/chiavdf-fast/src/: api.rs  ffi.rs  lib.rs
crates/client/: Cargo.toml  build.rs
crates/client-engine/: Cargo.toml
crates/client-engine/src/: api.rs  backend.rs  engine.rs  pinning.rs  worker.rs
crates/client-gui/: Cargo.toml  tauri.conf.json
crates/client-gui/src/: main.rs
crates/client/src/: backend.rs  bench.rs  cli.rs  constants.rs  controller.rs  main.rs  protocol.rs  shutdown.rs  terminal.rs  ui.rs  worker.rs
ui/: package.json  pnpm-lock.yaml
ui/src/: App.svelte
