[package]
name = "bbr-client-gui"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread", "macros"] }
tauri = { version = "=2.10.2", features = [] }

bbr-client-core = { path = "../client-core" }
bbr-client-engine = { path = "../client-engine" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Use the production backend URL as the compiled default.
prod-backend = []
# Build a "support" GUI with devtools enabled in release.
support-devtools = ["tauri/devtools"]
